--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -451,7 +451,6 @@ CONFIG_IP_PNP_BOOTP=y
 CONFIG_PREVENT_FIRMWARE_BUILD=y
 CONFIG_CRYPTO_TWOFISH=y
 CONFIG_FREEZER=y
-CONFIG_BT=m
 CONFIG_NET_CLS_ACT=y
 CONFIG_RTC_LIB=y
 CONFIG_NETFILTER_XT_MATCH_POLICY=y
@@ -590,7 +589,6 @@ CONFIG_EXPERT=y
 CONFIG_WIRELESS=y
 CONFIG_UART2_RK29=y
 CONFIG_WEXT_PROC=y
-CONFIG_BT_HCIBTUSB=m
 CONFIG_PERF_USE_VMALLOC=y
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
 CONFIG_FRAME_WARN=1024
@@ -719,6 +717,7 @@ CONFIG_USB_SUPPORT=y
 CONFIG_TOUCHSCREEN_SIZE=y
 CONFIG_INPUT_POLLDEV=y
 CONFIG_NETFILTER_XT_MATCH_QTAGUID=y
+CONFIG_MACH_M712HC=y
 CONFIG_PL330=y
 CONFIG_STAGING=y
 CONFIG_MTD_CHAR=y
@@ -775,7 +774,6 @@ CONFIG_HID_ROCCAT_ARVO=y
 CONFIG_NET_EMATCH=y
 CONFIG_IP_NF_TARGET_REJECT=y
 CONFIG_GENERIC_HARDIRQS=y
-CONFIG_MACH_M712HCZ=y
 CONFIG_RTC_INTF_DEV=y
 CONFIG_MTD_MAP_BANK_WIDTH_4=y
 CONFIG_HID_SUPPORT=y
