Update defconfig, fix setlocalversion"++"

--- a/arch/arm/configs/M712HC_defconfig
+++ b/arch/arm/configs/M712HC_defconfig
@@ -504,6 +504,7 @@ CONFIG_PM=y
 # CONFIG_PM_DEBUG is not set
 # CONFIG_APM_EMULATION is not set
 # CONFIG_SUSPEND_TIME is not set
+CONFIG_SUSPEND_SYNC_WORKQUEUE=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_NET=y
 
@@ -1343,7 +1344,7 @@ CONFIG_INPUT_UINPUT=y
 # CONFIG_MAG_SENSORS is not set
 CONFIG_G_SENSOR_DEVICE=y
 CONFIG_GS_MMA7660=y
-# CONFIG_GS_MMA8452 is not set
+# CONFIG_GS_MMA84520 is not set
 # CONFIG_GS_KXTF9 is not set
 # CONFIG_GS_LIS3DH is not set
 # CONFIG_GS_L3G4200D is not set
