--- a/.config
+++ b/.config
@@ -154,7 +154,7 @@ CONFIG_BASE_SMALL=0
 CONFIG_MODULES=y
 # CONFIG_MODULE_FORCE_LOAD is not set
 CONFIG_MODULE_UNLOAD=y
-CONFIG_MODULE_FORCE_UNLOAD=y
+# CONFIG_MODULE_FORCE_UNLOAD is not set
 # CONFIG_MODVERSIONS is not set
 # CONFIG_MODULE_SRCVERSION_ALL is not set
 CONFIG_BLOCK=y
@@ -296,9 +296,9 @@ CONFIG_VENDOR_YF=y
 # CONFIG_MACH_M727HCF is not set
 # CONFIG_MACH_M727HD is not set
 # CONFIG_MACH_M723HR is not set
-CONFIG_MACH_M712HC=y
+# CONFIG_MACH_M712HC is not set
 # CONFIG_MACH_M712HCX is not set
-# CONFIG_MACH_M712HCZ is not set
+CONFIG_MACH_M712HCZ=y
 # CONFIG_MACH_M719HC is not set
 # CONFIG_MACH_M1005HD is not set
 # CONFIG_MACH_M1006HD is not set
@@ -1385,7 +1385,7 @@ CONFIG_INPUT_UINPUT=y
 # CONFIG_MAG_SENSORS is not set
 CONFIG_G_SENSOR_DEVICE=y
 CONFIG_GS_MMA7660=y
-# CONFIG_GS_MMA8452 is not set
+CONFIG_GS_MMA8452=y
 # CONFIG_GS_KXTF9 is not set
 # CONFIG_GS_LIS3DH is not set
 # CONFIG_GS_L3G4200D is not set
@@ -2133,7 +2133,7 @@ CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 CONFIG_USB_DEVICE_CLASS=y
 # CONFIG_USB_DYNAMIC_MINORS is not set
 # CONFIG_USB_OTG_WHITELIST is not set
-CONFIG_USB_OTG_BLACKLIST_HUB=y
+# CONFIG_USB_OTG_BLACKLIST_HUB is not set
 # CONFIG_USB_MON is not set
 # CONFIG_USB_WUSB is not set
 # CONFIG_USB_WUSB_CBAF is not set
@@ -2314,9 +2314,13 @@ CONFIG_USB20_HOST=y
 CONFIG_USB20_HOST_EN=y
 CONFIG_USB20_OTG=y
 # CONFIG_DWC_OTG_HOST_ONLY is not set
-CONFIG_DWC_OTG_DEVICE_ONLY=y
-# CONFIG_DWC_OTG_BOTH_HOST_SLAVE is not set
+# CONFIG_DWC_OTG_DEVICE_ONLY is not set
+CONFIG_DWC_OTG_BOTH_HOST_SLAVE=y
+CONFIG_DWC_OTG_DEFAULT_ID=y
+# CONFIG_DWC_OTG_DEFAULT_HOST is not set
+# CONFIG_DWC_OTG_DEFAULT_DEVICE is not set
 CONFIG_DWC_CONN_EN=y
+CONFIG_USB20_OTG_EN=y
 # CONFIG_DWC_OTG_DEBUG is not set
 # CONFIG_DWC_REMOTE_WAKEUP is not set
 CONFIG_DWC_OTG=y
