--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -26,7 +26,6 @@ CONFIG_HID_ROCCAT_PYRA=y
 CONFIG_INOTIFY_USER=y
 CONFIG_NF_CONNTRACK_NETBIOS_NS=y
 CONFIG_HDMI=y
-CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_I2C2_RK29=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_DEINTERLACE=y
@@ -128,7 +127,6 @@ CONFIG_BLK_DEV_INITRD=y
 CONFIG_NF_CONNTRACK_SANE=y
 CONFIG_NF_CT_PROTO_DCCP=y
 CONFIG_ZLIB_INFLATE=y
-CONFIG_DWC_OTG_DEVICE_ONLY=y
 CONFIG_USB_G_ANDROID=y
 CONFIG_CRYPTO_TWOFISH_COMMON=y
 CONFIG_LOGO_LINUX_CLUT224=y
@@ -356,6 +354,7 @@ CONFIG_INPUT_UINPUT=y
 CONFIG_MEDIA_TUNER_SIMPLE=y
 CONFIG_MTD_CFI_I1=y
 CONFIG_NF_NAT=y
+CONFIG_DWC_OTG_BOTH_HOST_SLAVE=y
 CONFIG_REGULATOR=y
 CONFIG_FAIR_GROUP_SCHED=y
 CONFIG_SND_RK29_SOC=y
@@ -470,6 +469,7 @@ CONFIG_INET_XFRM_MODE_TUNNEL=y
 CONFIG_PREEMPT_RCU=y
 CONFIG_NF_NAT_NEEDED=y
 CONFIG_SERIAL_RK29=y
+CONFIG_GS_MMA8452=y
 CONFIG_LOCKDEP_SUPPORT=y
 CONFIG_NO_HZ=y
 CONFIG_RTC_INTF_ALARM=y
@@ -521,7 +521,6 @@ CONFIG_IP_NF_IPTABLES=y
 CONFIG_CMDLINE=""
 CONFIG_HAVE_DMA_API_DEBUG=y
 CONFIG_HID_SAMSUNG=y
-CONFIG_USB_OTG_BLACKLIST_HUB=y
 CONFIG_USB_ARCH_HAS_HCD=y
 CONFIG_GENERIC_IRQ_SHOW=y
 CONFIG_IPV6_OPTIMISTIC_DAD=y
@@ -610,6 +609,7 @@ CONFIG_VIDEOBUF_DMA_CONTIG=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_FB_EARLYSUSPEND=y
 CONFIG_HZ=100
+CONFIG_USB20_OTG_EN=y
 CONFIG_I2C_HELPER_AUTO=y
 CONFIG_NETFILTER_XT_MATCH_U32=y
 CONFIG_DEFAULT_IOSCHED="cfq"
@@ -630,6 +630,7 @@ CONFIG_IP_NF_MATCH_AH=y
 CONFIG_RK29_PWM_REGULATOR=y
 CONFIG_VIVANTE=y
 CONFIG_NETFILTER_XT_MATCH_LIMIT=y
+CONFIG_DWC_OTG_DEFAULT_ID=y
 CONFIG_FB=y
 CONFIG_I2C_COMPAT=y
 CONFIG_CPU_32v7=y
@@ -717,7 +718,6 @@ CONFIG_USB_SUPPORT=y
 CONFIG_TOUCHSCREEN_SIZE=y
 CONFIG_INPUT_POLLDEV=y
 CONFIG_NETFILTER_XT_MATCH_QTAGUID=y
-CONFIG_MACH_M712HC=y
 CONFIG_PL330=y
 CONFIG_STAGING=y
 CONFIG_MTD_CHAR=y
@@ -774,6 +774,7 @@ CONFIG_HID_ROCCAT_ARVO=y
 CONFIG_NET_EMATCH=y
 CONFIG_IP_NF_TARGET_REJECT=y
 CONFIG_GENERIC_HARDIRQS=y
+CONFIG_MACH_M712HCZ=y
 CONFIG_RTC_INTF_DEV=y
 CONFIG_MTD_MAP_BANK_WIDTH_4=y
 CONFIG_HID_SUPPORT=y
