add governors and bfq scheduler.(and missing bluethoot files)

--- a/include/config/tristate.conf
+++ b/include/config/tristate.conf
@@ -8,7 +8,6 @@ CONFIG_IP_NF_TARGET_REDIRECT=Y
 CONFIG_CRC32=Y
 CONFIG_NF_NAT_PROTO_SCTP=Y
 CONFIG_IR_JVC_DECODER=Y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=Y
 CONFIG_BLK_DEV_DM=Y
 CONFIG_HID_ROCCAT_PYRA=Y
 CONFIG_NF_CONNTRACK_NETBIOS_NS=Y
@@ -359,6 +358,7 @@ CONFIG_BLK_DEV_SD=Y
 CONFIG_NETFILTER_NETLINK=Y
 CONFIG_USB_DWC_OTG=Y
 CONFIG_BITREVERSE=Y
+CONFIG_IOSCHED_BFQ=Y
 CONFIG_USB_SERIAL_WWAN=Y
 CONFIG_VIDEO_V4L2_COMMON=Y
 CONFIG_CRYPTO_BLKCIPHER=Y
