--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -16,7 +16,6 @@ CONFIG_VFP=y
 CONFIG_IR_JVC_DECODER=y
 CONFIG_AEABI=y
 CONFIG_APANIC=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_BLK_DEV_DM=y
 CONFIG_IP_MULTIPLE_TABLES=y
@@ -74,6 +73,7 @@ CONFIG_NETFILTER_XT_MATCH_QUOTA2_LOG=y
 CONFIG_XFRM_IPCOMP=y
 CONFIG_CRYPTO_RNG2=y
 CONFIG_NETFILTER_NETLINK_QUEUE=y
+CONFIG_DEFAULT_BFQ=y
 CONFIG_TREE_PREEMPT_RCU=y
 CONFIG_DM_CRYPT=y
 CONFIG_HAVE_PROC_CPU=y
@@ -242,7 +242,6 @@ CONFIG_MAGIC_SYSRQ=y
 CONFIG_NETFILTER_XT_MATCH_MARK=y
 CONFIG_IP_NF_MANGLE=y
 CONFIG_LCD_YF=y
-CONFIG_DEFAULT_CFQ=y
 CONFIG_INET6_XFRM_MODE_TUNNEL=y
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_DEBUG_BUGVERBOSE=y
@@ -612,7 +611,7 @@ CONFIG_HZ=100
 CONFIG_USB20_OTG_EN=y
 CONFIG_I2C_HELPER_AUTO=y
 CONFIG_NETFILTER_XT_MATCH_U32=y
-CONFIG_DEFAULT_IOSCHED="cfq"
+CONFIG_DEFAULT_IOSCHED="bfq"
 CONFIG_TABLET_USB_KBTAB=y
 CONFIG_IPV6_MIP6=y
 CONFIG_NETFILTER_DEBUG=y
@@ -763,6 +762,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 CONFIG_USB_DWC_OTG=y
 CONFIG_RCU_FANOUT=32
 CONFIG_BITREVERSE=y
+CONFIG_IOSCHED_BFQ=y
 CONFIG_USB_SERIAL_WWAN=y
 CONFIG_VIDEO_V4L2_COMMON=y
 CONFIG_CRYPTO_BLKCIPHER=y
